fix layout issue caused by full width table #3536

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -2065,6 +2065,7 @@ div.field {
 }
 
 div.field-title {
+  display:inline-table;
   float: left;
   text-align: right;
   font-size: 1em;
@@ -2074,14 +2075,12 @@ div.field-title {
 }
 
 div.field-content {
-  display:inline-block;
+  display:inline-table;
   float:none;
-  min-width: 20em;
   width: calc(100% - 11em);
 }
 
 .one-column div.field-title {
-  display:inline-block;
   float:none;
   position:static;
   vertical-align:top;
